[package]
name = "twitch-hls-client"
version = "1.4.3"
edition = "2024"
rust-version = "1.85"
authors = ["2bc4 <119853089+2bc4@users.noreply.github.com>"]
description = "Minimal CLI client for watching/recording Twitch streams"
license = "GPL-3.0-or-later"
repository = "https://github.com/2bc4/twitch-hls-client"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap-used = "deny"
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module-name-repetitions = "allow"

# args
ref-option = "allow"
struct_excessive_bools = "allow"
unnecessary_wraps = "allow"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true

[features]
default = ["colors"]
colors = []
debug-logging = ["rustls/logging"]

[dependencies]
anyhow = "1.0"
chunked_transfer = "1.5"
flate2 = "1.0"
getrandom = { version = "0.2", features = ["std"] }
log = { version = "0.4", features = ["std", "max_level_debug"] }
pico-args = { version = "0.5", features = ["eq-separator"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-native-certs = "0.8"
