[package]
name = "twitch-hls-client"
version = "1.0.8"
authors = ["2bc4 <119853089+2bc4@users.noreply.github.com>"]
description = "Minimal CLI client for watching low latency Twitch streams"
license = "GPL-3.0-or-later"
repository = "https://github.com/2bc4/twitch-hls-client"
edition = "2021"
rust-version = "1.75"

[lints.rust]
unsafe_code = "forbid"
warnings = "deny"

[lints.clippy]
pedantic = "deny"

[features]
default = ["colors"]
colors = []
http2 = ["curl/http2"]

[dependencies]
anyhow = "1.0.79"
curl = { version = "0.4.44", default-features = false, features = ["static-curl", "rustls"]}
fastrand = "2.0.1"
log = { version = "0.4.20", features = ["std", "max_level_debug"] }
pico-args = { version = "0.5.0", features = ["eq-separator"] }
rustls-native-certs = { version = "0.7.0", path = "../rustls-native-certs" }
url = "2.5.0"
